[package]
name = "ft8-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 core — Pure Rust FT8 decoder/encoder library"

[features]
default = ["parallel"]
parallel = ["rayon"]

[dependencies]
mfsk-core = { path = "../mfsk-core" }
mfsk-fec = { path = "../mfsk-fec" }
mfsk-msg = { path = "../mfsk-msg" }
rustfft = "6"
num-complex = "0.4"
crc = "3"
rayon = { version = "1", optional = true }
