[package]
name = "jt65-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "WebFT8 — JT65 protocol implementation (65-FSK, RS(63,12) GF(2^6), 72-bit JT message)."

[dependencies]
mfsk-core = { path = "../mfsk-core" }
mfsk-fec = { path = "../mfsk-fec" }
mfsk-msg = { path = "../mfsk-msg" }
rustfft = "6"
num-complex = "0.4"
