[package]
name = "wsjt-ffi"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
description = "C ABI for rs-ft8n — exposes FT8/FT4/WSPR/JT9/JT65 decoders + synthesisers to C++/Kotlin via cbindgen-generated wsjt.h"

[lib]
name = "wsjt"
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
ft8-core  = { path = "../ft8-core" }
ft4-core  = { path = "../ft4-core" }
fst4-core = { path = "../fst4-core" }
wspr-core = { path = "../wspr-core" }
jt9-core  = { path = "../jt9-core" }
jt65-core = { path = "../jt65-core" }
mfsk-core = { path = "../mfsk-core" }
mfsk-msg  = { path = "../mfsk-msg" }

[build-dependencies]
cbindgen = "0.29"
